# cdfi-data

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
cdfidata/: __init__.py
cdfidata/pipeline/: cleaner.py  downloader.py  exporter.py
cdfidata/sources/: awards.py  clr.py  tlr.py
cdfidata/utils/: schema.py
docs/: CANONICAL_SCHEMA.md
tests/: conftest.py  test_awards.py  test_cleaner.py  test_clr.py  test_tlr.py
