[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdfidata"
version = "0.1.4"
description = "ETL pipeline for CDFI Fund and DOL public datasets — TLR, CLR, ILR, NMTC, Awards, and LCA (Labor Condition Application) data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "requests>=2.27.0",
]

[project.urls]
Homepage = "https://github.com/Jaypatel1511/cdfi-data"
