[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdfidata"
version = "0.3.2"
description = "ETL pipeline for US Treasury CDFI Fund public datasets — TLR, CLR, and Awards data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "requests>=2.27.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=7.0.0"]

[project.urls]
Homepage = "https://github.com/Jaypatel1511/cdfi-data"

[tool.pytest.ini_options]
markers = ["live: hits live CDFI Fund endpoints (deselect with -m 'not live')"]
